tests/ui/issues/issue-72076.rs
trait X {
    type S;
    fn f() -> Self::S {} //~ ERROR mismatched types
}

fn main() {}
